# vox

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_zh.md  build.rs  install.sh
.claude/: settings.json
.github/workflows/: ci.yml  release-please.yml  release.yml  test-cuda-runtime.yml
Formula/: vox.rb
docs/: ARCHITECTURE.md  FEATURES.md  GUIDE.md
examples/: test_streaming.rs
src/: audio.rs  chat.rs  clone.rs  config.rs  daemon.rs  db.rs  init.rs  input.rs  lib.rs  main.rs  mcp.rs  pack.rs  stt.rs  tui.rs
src/backend/: kokoro.rs  mod.rs  piper.rs  qwen.rs  qwen_native.rs  say.rs  voxtream.rs
tests/: chat_test.rs  cli_test.rs  db_test.rs  init_test.rs  perf_test.rs  qwen_test.rs  say_test.rs  security_test.rs  stt_test.rs  ux_test.rs
